--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Git-Tutorial</title>
 </head>
 <body>
-    
+    <table>
+        <caption>Monthly savings</caption>
+        <tr>
+          <th>Month</th>
+          <th>Savings</th>
+        </tr>
+        <tr>
+          <td>January</td>
+          <td>$100</td>
+        </tr>
+      </table>
 </body>
 </html>
